# screenshotter

./: .gitignore  CMakeLists.txt  README.md
src/: Screenshot.cpp  Screenshot.h  main.cpp  utils.h
